# rust-offline-rl

./: .gitignore  Cargo.toml  Dockerfile.cuda-all  Makefile  README.md
config/: default.toml
crates/orl-algo/: Cargo.toml
crates/orl-algo/src/: dpo.rs  ilql.rs  lib.rs  rw_sft.rs  traits.rs
crates/orl-data/: Cargo.toml
crates/orl-data/src/: ingest.rs  lib.rs  preference.rs  replay_buffer.rs  trajectory.rs
crates/orl-model/: Cargo.toml
crates/orl-model/src/: causal_lm.rs  lib.rs  loader.rs  value_head.rs
crates/orl-train/: Cargo.toml
crates/orl-train/src/: checkpoint.rs  eval.rs  lib.rs  paged_adamw.rs  scheduler.rs  trainer.rs
docs/: STRATEGIES.md  ilql.md
src/: main.rs  serve.rs
