[package]
name = "orl-data"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
